Re-add Spigot compatibility (#184)
* Move to shared action for automerge
* Fix potential incompatibility with plugins changing max stack sizes
* Clean up code smells
* Fix default config not applying on first run
* Fix incorrect cost calculation on later work
* Fix silk touch not pausing when full